Fixed overlap of Past 40 Results button and title on the results page.

--- a/src/css/large.css
+++ b/src/css/large.css
@@ -91,7 +91,7 @@
   }
 
   .searchResults h2 {
-    margin-bottom: -50px;
+    margin-bottom: -53px;
   }
 
   /* Footer CSS */
